--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "proxy": "ssh -vnNT -R 3000:localhost:4600 forge@dev.ezavalishin.ru"
+    "proxy": "ssh -vnNT -R 3000:localhost:4600 forge@dev.ezavalishin.ru",
+    "deploy": "rm -rf build/ && react-scripts build && vk-miniapps-deploy"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@vkontakte/vk-miniapps-deploy": "^0.0.10",
     "cross-env": "^5.2.1",
     "react-hot-loader": "^4.12.18",
     "react-scripts": "^3.2.0"
