--- a/package.json
+++ b/package.json
@@ -21,19 +21,22 @@
   "dependencies": {
     "@vkontakte/icons": "^1.11.4",
     "@vkontakte/vk-connect": "^1.6.11",
+    "@vkontakte/vk-qr": "^2.0.9",
     "@vkontakte/vkui": "^2.33.3",
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
     "chalk": "^2.4.2",
     "classnames": "^2.2.6",
     "core-js": "^3.4.3",
+    "laravel-echo": "^1.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-swipeable": "^5.5.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "browserslist": {
     "production": [
