--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "^3.2.0"
   },
   "dependencies": {
+    "@sentry/browser": "^5.10.2",
     "@vkontakte/icons": "^1.11.4",
     "@vkontakte/vk-connect": "^1.6.11",
     "@vkontakte/vk-qr": "^2.0.9",
